<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"

    tools:context="ir.netglobe.example.androidStudio.MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showInterstitialAd"
                android:id="@+id/btn_show_interstitial_ad"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/information"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_information" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getInformation"
                android:id="@+id/btn_get_Information" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addBannerToRedLayout"
                android:id="@+id/btn_add_banner" />

            <LinearLayout
                android:orientation="vertical"
                android:background="#ff0000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="10dp"
                android:id="@+id/red_layout"></LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RemoveBannerFromRedLayout"
                android:id="@+id/btn_remove_banner" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ff00ff00">

            </LinearLayout>
            <com.arna.manager.views.baners.AdView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.arna.manager.views.baners.AdView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
